<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Favorites">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/principal_pagefavorites"
            style="@style/CategoryStyle"
            android:background="@color/verde_menu"
            android:text="@string/inicio_app"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/pagina_busquedafavorites"
            style="@style/CategoryStyle"
            android:background="@color/verde_menu"
            android:text="@string/buscar_cancion" />

        <TextView
            android:id="@+id/canciones_favoritasfavorites"
            style="@style/CategoryStyle"
            android:background="@color/verde_menu"
            android:text="@string/favoritos" />

        <TextView
            android:id="@+id/lista_demusicafavorites"
            style="@style/CategoryStyle"
            android:background="@color/verde_menu"
            android:text="@string/lista_menu"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/texto1favoritos"
            android:padding="28dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/texto2favoritos"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:textSize="18sp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>