<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".List">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/principal_page"
            style="@style/CategoryStyle"
            android:background="@color/verde_menu"
            android:text="@string/inicio_app"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/pagina_busqueda"
            style="@style/CategoryStyle"
            android:background="@color/verde_menu"
            android:text="@string/buscar_cancion" />

        <TextView
            android:id="@+id/canciones_favoritas"
            style="@style/CategoryStyle"
            android:background="@color/verde_menu"
            android:text="@string/favoritos" />

        <TextView
            android:id="@+id/lista_demusica"
            style="@style/CategoryStyle"
            android:background="@color/verde_menu"
            android:text="@string/lista_menu"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <ImageView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="center"
              android:padding="16dp"
              android:src="@drawable/pre"/>

          <ImageView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="center"
              android:padding="16dp"
              android:src="@drawable/pl"/>

          <ImageView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="center"
              android:padding="16dp"
              android:src="@drawable/nex"/>

      </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list">

    </ListView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>